# sfmDR_footprint

./: CMakeLists.txt  Camera.cpp  Camera.h  FootPrint.cpp  FootPrint.h  ImageInfo.cpp  Model.cpp  Model.h  OpenPosePerson.cpp  OpenPosePerson.h  README.md  main.cpp
Data/: camera_param.txt
Data/Projects/test/: camera_pose.txt  human_pose_info.txt  scene_mesh.ply
Data/Projects/test/result/: result.ply
basicFunction/: basicFunction.cpp  basicFunction.h
src/: Camera.cpp  FootPrint.cpp  FootPrint.h  ImageInfo.h  Model.cpp  OpenPosePerson.cpp  OpenPosePerson.h  main.cpp
